--- a/index.html
+++ b/index.html
@@ -18,7 +18,35 @@
     <![endif]-->
   </head>
   <body>
-    <h1 class="text-center">Hello, world!</h1>
+
+    <section class="icons">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-lg-2 col-md-4 col-sm-6 text-centr"><img src="img/koi.png" alt="Иконка"></div>
+          <div class="col-lg-2 col-md-4 col-sm-6 text-centr"><img src="img/koi.png" alt="Иконка"></div>
+          <div class="col-lg-2 col-md-4 col-sm-6 text-centr"><img src="img/koi.png" alt="Иконка"></div>
+          <div class="col-lg-2 col-md-4 col-sm-6 text-centr"><img src="img/koi.png" alt="Иконка"></div>
+          <div class="col-lg-2 col-md-4 col-sm-6 text-centr"><img src="img/koi.png" alt="Иконка"></div>
+          <div class="col-lg-2 col-md-4 col-sm-6 text-centr"><img src="img/koi.png" alt="Иконка"></div>
+        </div>
+      </div>
+    </section>
+
+
+    <section>
+      <div class="container">
+        <div class="row level_1 text-center">
+          <div class="col-lg-8 box">
+            <div class="row level_2">
+              <div class="col-xs-3 box-in"></div>
+              <div class="col-xs-3 box-in"></div>
+              <div class="col-xs-3 box-in"></div>
+              <div class="col-xs-3 box-in"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
