--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -18,36 +19,24 @@
     <![endif]-->
   </head>
   <body>
-
-    <section class="icons">
+    <header>
       <div class="container">
-        <div class="row text-center">
-          <div class="col-lg-2 col-md-4 col-sm-6 text-centr"><img src="img/koi.png" alt="Иконка"></div>
-          <div class="col-lg-2 col-md-4 col-sm-6 text-centr"><img src="img/koi.png" alt="Иконка"></div>
-          <div class="col-lg-2 col-md-4 col-sm-6 text-centr"><img src="img/koi.png" alt="Иконка"></div>
-          <div class="col-lg-2 col-md-4 col-sm-6 text-centr"><img src="img/koi.png" alt="Иконка"></div>
-          <div class="col-lg-2 col-md-4 col-sm-6 text-centr"><img src="img/koi.png" alt="Иконка"></div>
-          <div class="col-lg-2 col-md-4 col-sm-6 text-centr"><img src="img/koi.png" alt="Иконка"></div>
-        </div>
-      </div>
-    </section>
-
-
-    <section>
-      <div class="container">
-        <div class="row level_1 text-center">
-          <div class="col-lg-8 box">
-            <div class="row level_2">
-              <div class="col-xs-3 box-in"></div>
-              <div class="col-xs-3 box-in"></div>
-              <div class="col-xs-3 box-in"></div>
-              <div class="col-xs-3 box-in"></div>
+        <div class="row main-head">
+          <div class="col-lg-6 main-logo">
+            <div class="main-logo-border">
+              <p>Smart</p>
             </div>
+          </div>
+          <div class="col-lg-6 main-nav">
+            <a href="#" class="main-nav-bar">
+              <span></span>
+              <span></span>
+              <span></span>
+            </a>
           </div>
         </div>
       </div>
-    </section>
-
+    </header>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
