--- a/index.html
+++ b/index.html
@@ -29,10 +29,31 @@
           </div>
           <div class="col-lg-6 main-nav">
             <a href="#" class="main-nav-bar">
-              <span></span>
-              <span></span>
-              <span></span>
+              <div class="main-nav-btn">
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
             </a>
+          </div>
+        </div>
+        <div class="row main-text">
+          <div class="col-lg-8 col-lg-offset-2">
+            <h1><span>Smart</span> Agency Landign Page</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, fuga provident. Libero magni quibusdam labore ad iste saepe hic, maxime qui ipsum tempore beatae, volu tomi ptates doloremque rerum aspernatur dolorum at!</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="main-form">
+              <form action="#">
+                <p class="main-form-header"><span>Send</span> A Message</p>
+                <input type="text" placeholder="Your Name">
+                <input type="email" placeholder="Your Email">
+                <textarea rows="3" placeholder="Your Message"></textarea>
+                <button class="main-form-btn" type="sabmit">Send Message</button>
+              </form>
+            </div>
           </div>
         </div>
       </div>
