--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" rel="stylesheet">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -39,7 +40,7 @@
         </div>
         <div class="row main-text">
           <div class="col-lg-8 col-lg-offset-2">
-            <h1><span>Smart</span> Agency Landign Page</h1>
+            <h1><span>Smart</span> Agency Landing Page</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, fuga provident. Libero magni quibusdam labore ad iste saepe hic, maxime qui ipsum tempore beatae, volu tomi ptates doloremque rerum aspernatur dolorum at!</p>
           </div>
         </div>
@@ -58,6 +59,52 @@
         </div>
       </div>
     </header>
+
+    <section id="process">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 section-header text-center">
+            <h2><span>Working</span> Process</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam harum fugit fuga fugiat nisi?</p>
+          </div>
+        </div>
+        <div class="row">
+          
+          <div class="col-lg-3">
+            <div class="process-box box-tomi">
+              <i class="fa fa-magnet"></i>
+              <h4>Koc Koi Tomi</h4>
+              <p>Lorem ipsum is dummy lorem very dumy</p>
+              <button class="process-btn"><span class="btn-plus"></span>Know More</button>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="process-box box-koimona">
+              <i class="fa fa-bug"></i>
+              <h4>Koimona Set</h4>
+              <p>Lorem ipsum is dummy lorem very dumy</p>
+              <button class="process-btn"><span class="btn-plus"></span>Know More</button>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="process-box box-koire">
+              <i class="fa fa-cogs"></i>
+              <h4>Setting Koire</h4>
+              <p>Lorem ipsum is dummy lorem very dumy</p>
+              <button class="process-btn"><span class="btn-plus"></span>Know More</button>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="process-box box-lara">
+              <i class="fa fa-camera-retro"></i>
+              <h4>Ko Image Lara</h4>
+              <p>Lorem ipsum is dummy lorem very dumy</p>
+              <button class="process-btn"><span class="btn-plus"></span>Know More</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
