--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <input type="text" placeholder="Your Name">
                 <input type="email" placeholder="Your Email">
                 <textarea rows="3" placeholder="Your Message"></textarea>
-                <button class="main-form-btn" type="sabmit">Send Message</button>
+                <button class="main-form-btn" type="sabmit">Send Message <span>&rarr;</span></button>
               </form>
             </div>
           </div>
@@ -69,7 +69,6 @@
           </div>
         </div>
         <div class="row">
-          
           <div class="col-lg-3">
             <div class="process-box box-tomi">
               <i class="fa fa-magnet"></i>
@@ -105,6 +104,122 @@
         </div>
       </div>
     </section>
+    <section id="works">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 section-header text-center">
+            <h2><span>Featured</span> Works</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit Maiores</p>
+          </div>
+        </div>
+        <div class="row works-row">
+          <div class="col-lg-4">
+            <div class="works-box">
+              <img src="img/works/work-1.jpg" alt="Описание">
+              <div class="sugnature">
+                <div class="sign">
+                  <p>Work #1</p>
+                  <button>Visit Gallery</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="works-box">
+              <img src="img/works/work-2.jpg" alt="Описание">
+              <div class="sugnature">
+                <div class="sign">
+                  <p>Work #2</p>
+                  <button>Visit Gallery</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="works-box">
+              <img src="img/works/work-3.jpg" alt="Описание">
+              <div class="sugnature">
+                <div class="sign">
+                  <p>Work #3</p>
+                  <button>Visit Gallery</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div> <!-- / row -->
+        <div class="row works-row">
+          <div class="col-lg-4">
+            <div class="works-box">
+              <img src="img/works/work-4.jpg" alt="Описание">
+              <div class="sugnature">
+                <div class="sign">
+                  <p>Work #4</p>
+                  <button>Visit Gallery</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="works-box">
+              <img src="img/works/work-5.jpg" alt="Описание">
+              <div class="sugnature">
+                <div class="sign">
+                  <p>Work #5</p>
+                  <button>Visit Gallery</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="works-box">
+              <img src="img/works/work-6.jpg" alt="Описание">
+              <div class="sugnature">
+                <div class="sign">
+                  <p>Work #6</p>
+                  <button>Visit Gallery</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div> <!-- / row -->
+        <div class="row works-row">
+          <div class="col-lg-4">
+            <div class="works-box">
+              <img src="img/works/work-7.jpg" alt="Описание">
+              <div class="sugnature">
+                <div class="sign">
+                  <p>Work #7</p>
+                  <button>Visit Gallery</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="works-box">
+              <img src="img/works/work-8.jpg" alt="Описание">
+              <div class="sugnature">
+                <div class="sign">
+                  <p>Work #8</p>
+                  <button>Visit Gallery</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="works-box">
+              <img src="img/works/work-9.jpg" alt="Описание">
+              <div class="sugnature">
+                <div class="sign">
+                  <p>Work #9</p>
+                  <button>Visit Gallery</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div> <!-- / row -->
+      </div>
+    </section>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
