--- a/index.html
+++ b/index.html
@@ -220,6 +220,123 @@
       </div>
     </section>
 
+    <section id="services">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 section-header text-center">
+            <h2><span>Services </span>We Provide</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit Maiores fuga provident Libero.</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-2">
+            <ul class="services-list" role="tablist">
+              <li role="presentation" class="services-list-item"><a href="#app" aria-controls="app" role="tab" data-toggle="tab"><img src="img/services/1.png" alt="Статистика"></a></li>
+              <li role="presentation" class="services-list-item"><a href="#web" aria-controls="web" role="tab" data-toggle="tab"><img src="img/services/2.png" alt="Настроки"></a></li>
+              <li role="presentation" class="services-list-item"><a href="#global" aria-controls="global" role="tab" data-toggle="tab"><img src="img/services/3.png" alt="Поиск"></a></li>
+            </ul>
+          </div>
+          <div class="col-lg-10">
+            <div class="services-info tab-content">
+              <div id="app" role="tabpanel" class="row tab-pane fade in active">
+                <div class="col-lg-8">
+                  <h4>Modern App Design</h4>
+                  <span class="services-line"></span>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus earum totam ad sint error porro. Consectetur, sunt, aperiam. Magni rem optio distinctio illum consequuntur delectus nulla illo aperiam itaque cumque. <br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel officia vitae eveniet quam rem unde facilis.</p>
+                  <button class="services-btn"><span class="btn-plus"></span>Know More</button>
+                </div>
+                <div class="col-lg-4">
+                  <img class="img-responsive" src="img/services/info-1.png" alt="">
+                </div>
+              </div> <!-- //row -->
+              <div id="web" role="tabpanel" class="row tab-pane fade">
+                <div class="col-lg-8">
+                  <h4>Modern Web Design</h4>
+                  <span class="services-line"></span>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus earum totam ad sint error porro. Consectetur, sunt, aperiam. Magni rem optio distinctio illum consequuntur delectus nulla illo aperiam itaque cumque. <br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel officia vitae eveniet quam rem unde facilis.</p>
+                  <button class="services-btn"><span class="btn-plus"></span>Know More</button>
+                </div>
+                <div class="col-lg-4">
+                  <img class="img-responsive" src="img/services/info-1.png" alt="">
+                </div>
+              </div> <!-- //row -->
+              <div id="global" role="tabpanel" class="row tab-pane fade">
+                <div class="col-lg-8">
+                  <h4>Modern Global Design</h4>
+                  <span class="services-line"></span>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus earum totam ad sint error porro. Consectetur, sunt, aperiam. Magni rem optio distinctio illum consequuntur delectus nulla illo aperiam itaque cumque. <br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel officia vitae eveniet quam rem unde facilis.</p>
+                  <button class="services-btn"><span class="btn-plus"></span>Know More</button>
+                </div>
+                <div class="col-lg-4">
+                  <img class="img-responsive" src="img/services/info-1.png" alt="">
+                </div>
+              </div> <!-- //row -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="FAQ">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 section-header text-center">
+            <h2><span>Frequently </span>Asked Questions</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga assumenda, quos!</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+              <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="headingOne">
+                  <h4 class="panel-title">
+                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                      Collapsible Group Item #1
+                    </a>
+                  </h4>
+                </div>
+                <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+                  <div class="panel-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                  </div>
+                </div>
+              </div>
+              <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="headingTwo">
+                  <h4 class="panel-title">
+                    <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                      Collapsible Group Item #2
+                    </a>
+                  </h4>
+                </div>
+                <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                  <div class="panel-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                  </div>
+                </div>
+              </div>
+              <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="headingThree">
+                  <h4 class="panel-title">
+                    <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                      Collapsible Group Item #3
+                    </a>
+                  </h4>
+                </div>
+                <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+                  <div class="panel-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                  </div>
+                </div>
+              </div>
+            </div> <!-- //acreon -->
+          </div>  <!-- //col-lg-12 -->
+        </div> 
+      </div>
+    </section>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
