--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="slick/slick.css">
+    <link rel="stylesheet" href="slick/slick-theme.css">
     <link rel="stylesheet" href="css/style.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -337,9 +339,127 @@
       </div>
     </section>
 
+    <section id="feedback">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 section-header text-center">
+            <h2><span>Clients</span> Said</h2>
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod quibusdam labore sunt?</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="feedback-slider">
+              <div class="feedback-slider-item text-center"> 
+                <div class="feedback-box">
+                  <img class="img-circle center-block feedback-img" src="img/feedback/1.jpg" alt="Make" >
+                  <div class="feedback-shadow">
+                    <p>“This was my first time renting from car rental. The service rep help me find the best rental to suit my needs. I will definitely rent with this company again”</p>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <p><span>Kita Say,</span> HK Director</p>  
+                  </div>
+                </div>
+              </div>
+              <div class="feedback-slider-item text-center">
+                <div class="feedback-box">
+                  <img class="img-circle center-block feedback-img" src="img/feedback/2.jpg" alt="Make" >
+                  <div class="feedback-shadow">                  
+                    <p>“This was my first time renting from car rental. The service rep help me find the best rental to suit my needs. I will definitely rent with this company again”</p>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <p><span>Kita Say,</span> HK Director</p>
+                  </div>
+                </div>
+              </div>
+              <div class="feedback-slider-item text-center">
+                <div class="feedback-box">
+                  <img class="img-circle center-block feedback-img" src="img/feedback/3.jpg" alt="Make" >
+                  <div class="feedback-shadow">
+                    <p>“This was my first time renting from car rental. The service rep help me find the best rental to suit my needs. I will definitely rent with this company again”</p>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <p><span>Kita Say,</span> HK Director</p>
+                  </div>
+                </div>
+              </div>
+              <div class="feedback-slider-item text-center">
+                <div class="feedback-box">
+                  <img class="img-circle center-block feedback-img" src="img/feedback/4.jpg" alt="Make" >
+                  <div class="feedback-shadow">                  
+                    <p>“This was my first time renting from car rental. The service rep help me find the best rental to suit my needs. I will definitely rent with this company again”</p>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <p><span>Kita Say,</span> HK Director</p>
+                  </div>
+                </div>
+              </div>
+              <div class="feedback-slider-item text-center">
+                <div class="feedback-box">
+                  <img class="img-circle center-block feedback-img" src="img/feedback/5.jpg" alt="Make" >
+                  <div class="feedback-shadow">                  
+                    <p>“This was my first time renting from car rental. The service rep help me find the best rental to suit my needs. I will definitely rent with this company again”</p>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <p><span>Kita Say,</span> HK Director</p>
+                  </div>
+                </div>
+              </div>
+              <div class="feedback-slider-item text-center">
+                <div class="feedback-box">
+                  <img class="img-circle center-block feedback-img" src="img/feedback/6.jpg" alt="Make" >
+                  <div class="feedback-shadow">                  
+                    <p>“This was my first time renting from car rental. The service rep help me find the best rental to suit my needs. I will definitely rent with this company again”</p>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <p><span>Kita Say,</span> HK Director</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="slick/slick.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+
+    <script>
+      $(document).ready(function(){
+        $('.feedback-slider').slick({
+            infinite: true,
+            slidesToShow: 2,
+            slidesToScroll: 2,
+            arrows: true,
+            prevArrow: '<i class="fa feedback-slider-arrows arrow-left fa-chevron-left"></i>',
+            nextArrow: '<i class="fa feedback-slider-arrows arrow-right fa-chevron-right"></i>',
+            dots: true
+
+        });
+      });
+    </script>
+
   </body>
 </html>
