--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <i class="fa fa-magnet"></i>
               <h4>Koc Koi Tomi</h4>
               <p>Lorem ipsum is dummy lorem very dumy</p>
-              <button class="process-btn"><span class="btn-plus"></span>Know More</button>
+              <button class="process-btn" data-toggle="modal" data-target="#modal-know"><span class="btn-plus"></span>Know More</button>
             </div>
           </div>
           <div class="col-lg-3">
@@ -84,7 +84,7 @@
               <i class="fa fa-bug"></i>
               <h4>Koimona Set</h4>
               <p>Lorem ipsum is dummy lorem very dumy</p>
-              <button class="process-btn"><span class="btn-plus"></span>Know More</button>
+              <button class="process-btn" data-toggle="modal" data-target="#modal-know"><span class="btn-plus"></span>Know More</button>
             </div>
           </div>
           <div class="col-lg-3">
@@ -92,7 +92,7 @@
               <i class="fa fa-cogs"></i>
               <h4>Setting Koire</h4>
               <p>Lorem ipsum is dummy lorem very dumy</p>
-              <button class="process-btn"><span class="btn-plus"></span>Know More</button>
+              <button class="process-btn" data-toggle="modal" data-target="#modal-know"><span class="btn-plus"></span>Know More</button>
             </div>
           </div>
           <div class="col-lg-3">
@@ -100,7 +100,7 @@
               <i class="fa fa-camera-retro"></i>
               <h4>Ko Image Lara</h4>
               <p>Lorem ipsum is dummy lorem very dumy</p>
-              <button class="process-btn"><span class="btn-plus"></span>Know More</button>
+              <button class="process-btn" data-toggle="modal" data-target="#modal-know"><span class="btn-plus"></span>Know More</button>
             </div>
           </div>
         </div>
@@ -439,6 +439,53 @@
         </div>
       </div>
     </section>
+
+    <footer id="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <button class="footer-btn" data-toggle="modal" data-target="#modal-1">Contact Us</button>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+
+
+    <!-- modal -->
+    <!-- modal-1 -->
+    <div class="modal fade" id="modal-1" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">Контакты</h4>
+          </div>
+          <div class="modal-body">
+            <p>One fine body&hellip;</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
+            <button type="button" class="btn btn-primary">Отправить</button>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
+    <!-- modal-know-modal -->
+    <div class="modal fade" id="modal-know" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">Подробная информация</h4>
+          </div>
+          <div class="modal-body">
+            <p>One fine body&hellip;</p>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
