--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="slick/slick.css">
     <link rel="stylesheet" href="slick/slick-theme.css">
     <link rel="stylesheet" href="css/style.css">
@@ -72,7 +73,7 @@
         </div>
         <div class="row">
           <div class="col-lg-3">
-            <div class="process-box box-tomi">
+            <div class="process-box box-tomi wow bounceInUp" data-wow-delay="0s">
               <i class="fa fa-magnet"></i>
               <h4>Koc Koi Tomi</h4>
               <p>Lorem ipsum is dummy lorem very dumy</p>
@@ -80,7 +81,7 @@
             </div>
           </div>
           <div class="col-lg-3">
-            <div class="process-box box-koimona">
+            <div class="process-box box-koimona wow bounceInUp" data-wow-delay="0.5s">
               <i class="fa fa-bug"></i>
               <h4>Koimona Set</h4>
               <p>Lorem ipsum is dummy lorem very dumy</p>
@@ -88,7 +89,7 @@
             </div>
           </div>
           <div class="col-lg-3">
-            <div class="process-box box-koire">
+            <div class="process-box box-koire wow bounceInUp" data-wow-delay="1s">
               <i class="fa fa-cogs"></i>
               <h4>Setting Koire</h4>
               <p>Lorem ipsum is dummy lorem very dumy</p>
@@ -96,7 +97,7 @@
             </div>
           </div>
           <div class="col-lg-3">
-            <div class="process-box box-lara">
+            <div class="process-box box-lara wow bounceInUp" data-wow-delay="1.5s">
               <i class="fa fa-camera-retro"></i>
               <h4>Ko Image Lara</h4>
               <p>Lorem ipsum is dummy lorem very dumy</p>
@@ -492,7 +493,11 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="slick/slick.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/wow.min.js"></script>
 
+    <script>
+      new WOW().init();
+    </script>
     <script>
       $(document).ready(function(){
         $('.feedback-slider').slick({
